what are you doing there

--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -14,7 +14,7 @@ import background from '../assets/background.svg';
 				what you up to <code><pre>ben</pre></code>
 			</h1>
 		
-		</section>g
+		</section>
 	</main>
 
 </div>
